--- a/src/integrations/CMakeLists.txt
+++ b/src/integrations/CMakeLists.txt
@@ -17,11 +17,7 @@ if(NOT APPLE)
     target_link_libraries(hestia_policy_engine PRIVATE stdc++fs)
 endif()
 target_include_directories(hestia_policy_engine SYSTEM PRIVATE ${sqlite_SOURCE_DIR})
-
 set_target_properties(hestia_policy_engine PROPERTIES OUTPUT_NAME hestia_policy_engine)
-#set_target_properties(hestia_policy_engine PROPERTIES SKIP_BUILD_RPATH FALSE)
-#set_target_properties(hestia_policy_engine PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-#set_target_properties(hestia_policy_engine PROPERTIES INSTALL_RPATH "${RPATH_ORIGIN_VAR}/../lib/${PROJECT_NAME};${RPATH_ORIGIN_VAR}/../lib")
 
 add_executable(hestia_sync_tool
     sync_main.cc 
@@ -34,11 +30,7 @@ endif()
 if(NOT APPLE)
     target_link_libraries(hestia_sync_tool PRIVATE stdc++fs)
 endif()
-
 set_target_properties(hestia_sync_tool PROPERTIES OUTPUT_NAME hestia_sync_tool)
-#set_target_properties(hestia_sync_tool PROPERTIES SKIP_BUILD_RPATH FALSE)
-#set_target_properties(hestia_sync_tool PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-#set_target_properties(hestia_sync_tool PROPERTIES INSTALL_RPATH "${RPATH_ORIGIN_VAR}/../lib/${PROJECT_NAME};${RPATH_ORIGIN_VAR}/../lib")
 
 add_executable(hestia_datamover
     datamover_main.cc 
@@ -51,8 +43,15 @@ endif()
 if(NOT APPLE)
     target_link_libraries(hestia_datamover PRIVATE stdc++fs)
 endif()
-
 set_target_properties(hestia_datamover PROPERTIES OUTPUT_NAME hestia_datamover)
-#set_target_properties(hestia_datamover PROPERTIES SKIP_BUILD_RPATH FALSE)
-#set_target_properties(hestia_datamover PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-#set_target_properties(hestia_datamover PROPERTIES INSTALL_RPATH "${RPATH_ORIGIN_VAR}/../lib/${PROJECT_NAME};${RPATH_ORIGIN_VAR}/../lib")
+
+add_executable(hestia_s3
+    s3_main.cc)
+target_link_libraries(hestia_s3 PRIVATE hestia_lib hestia_app)
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+    target_link_libraries(hestia_s3 PRIVATE development_flags)
+endif()
+if(NOT APPLE)
+    target_link_libraries(hestia_s3 PRIVATE stdc++fs)
+endif()
+set_target_properties(hestia_s3 PROPERTIES OUTPUT_NAME hestia_s3)
