--- a/test/data/configs/hestia_deep.yaml
+++ b/test/data/configs/hestia_deep.yaml
@@ -4,10 +4,9 @@ logger:
   level: warn
 
 server:
-  controller: true 
   tag: controller0
-  host_address: 127.0.0.1
-  host_port: 8080
+  host: 127.0.0.1
+  port: 8080
   
 tiers:
   - id: "00000000-0000-0000-0000-000000000001"
