Support redirects in S3 clients

--- a/test/data/configs/phobos/deimos_mock_phobos_controller.yaml
+++ b/test/data/configs/phobos/deimos_mock_phobos_controller.yaml
@@ -1,13 +1,15 @@
 server:
   host: 127.0.0.1
-  port: 8080
-  tag: controller0
+  tag: s3_controller0
+  interfaces: 
+    - type: s3
+      port: 8090
+    - type: http
+      port: 8080
 
 tiers:
   - id: "00000000-0000-0000-0000-000000000001"
     priority: 0
-  - id: "00000000-0000-0000-0000-000000000002"
-    priority: 1
 
 event_feed:
   active: true
