--- a/test/data/configs/s3/s3_server.yaml
+++ b/test/data/configs/s3/s3_server.yaml
@@ -1,10 +1,11 @@
 server:
   host: 127.0.0.1
-  port: 8090
-  controller: true
   tag: s3_controller0
-  web_app: 
-    interface: s3
+  interfaces: 
+    - type: s3
+      port: 8090
+    - type: http
+      port: 8080
 
 tiers:
   - id: "00000000-0000-0000-0000-000000000001"
