Add fixes for e2e tests and bump dependency versions.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,4 +56,4 @@ endif()
 set_target_properties(${PROJECT_NAME}_main PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
 set_target_properties(${PROJECT_NAME}_main PROPERTIES SKIP_BUILD_RPATH FALSE)
 set_target_properties(${PROJECT_NAME}_main PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-set_target_properties(${PROJECT_NAME}_main PROPERTIES INSTALL_RPATH "${RPATH_ORIGIN_VAR}/../lib/${PROJECT_NAME};${RPATH_ORIGIN_VAR}/../lib")
+set_target_properties(${PROJECT_NAME}_main PROPERTIES INSTALL_RPATH "${RPATH_ORIGIN_VAR}/../${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME};${RPATH_ORIGIN_VAR}/../${CMAKE_INSTALL_LIBDIR}")
