--- a/infra/cmake/hestia.pc.in
+++ b/infra/cmake/hestia.pc.in
@@ -1,5 +1,5 @@
 prefix="@CMAKE_INSTALL_PREFIX@"
-libdir="${prefix}/lib/@PROJECT_NAME@"
+libdir="${prefix}/@CMAKE_INSTALL_LIBDIR@/@PROJECT_NAME@"
 includedir="${prefix}/include/@PROJECT_NAME@"
 
 Name: @PROJECT_NAME@
