--- a/src/ProjectConfig.h.in
+++ b/src/ProjectConfig.h.in
@@ -14,6 +14,6 @@ namespace hestia::project_config
 
     [[maybe_unused]] static std::string get_hestia_plugin_path()
     {
-        return "@CMAKE_INSTALL_PREFIX@/lib/@PROJECT_NAME@";
+        return "@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_LIBDIR@/@PROJECT_NAME@";
     }
 }
