--- a/test/data/configs/hestia_controller.yaml
+++ b/test/data/configs/hestia_controller.yaml
@@ -1,12 +1,12 @@
 server:
-  host: 127.0.0.1
-  port: 8080
-  access_control_origin: "*"
-  tag: controller0
+  host: 127.0.0.1 # Host we will run on, usually localhost
+  port: 8080 # Port to run the server on, unless overriden by an interface
+  access_control_origin: "*" # Handle CORS if interacting with web browser
+  tag: controller0 # A descriptive name for the endpoint
 
-tiers:
-  - id: "00000000-0000-0000-0000-000000000001"
-    priority: 0
+tiers: # Storage tiers that the HSM system should 'know about'
+  - id: "00000000-0000-0000-0000-000000000001" # Tier unique identifier
+    priority: 0 # Tier HSM priority (0-255)
   - id: "00000000-0000-0000-0000-000000000002"
     priority: 1
   - id: "00000000-0000-0000-0000-000000000003"
@@ -16,8 +16,8 @@ tiers:
   - id: "00000000-0000-0000-0000-000000000005"
     priority: 4
 
-event_feed:
+event_feed: # Turn on a feed of HSM events - written to a yaml file in the cache
   active: true
 
-logger:
+logger: # Set the log level
   level: debug
