--- a/test/data/configs/hestia_worker.yaml
+++ b/test/data/configs/hestia_worker.yaml
@@ -4,15 +4,15 @@ server:
   controller_address: 127.0.0.1:8080
   tag: worker0
 
-object_store_backends:
+object_store_backends:  # Specify which backends this node supports
   - backend_type: file_hsm
-    tiers: 
+    tiers:  # This is a POSIX filesystem store associated with 5 tiers
       ids: ["00000000-0000-0000-0000-000000000001",
             "00000000-0000-0000-0000-000000000002",
             "00000000-0000-0000-0000-000000000003",
             "00000000-0000-0000-0000-000000000004",
             "00000000-0000-0000-0000-000000000005"]
-    config: 
+    config: # The root is the path to the store's cache, if relative it is relative to Hestia cache
       root: hsm_object_store_worker0
 
 logger:
