--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ stages:
     yum install -qy $(cat ${HESTIA_DEPS}/base);
     ${CI_PROJECT_DIR}/infra/scripts/bootstrap_cmake.sh $CMAKE_INSTALL_CACHE_DIR;
   - &install_motr
-    curl ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/motr-rpms/1.0.0/motr-rpms-$(arch).tar.gz | tar xz;
+    curl ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/motr-rpms/1.0.0/motr-rpms-$(arch).tar.gz | tar -xvfz;
     yum install -qy ${CI_PROJECT_DIR}/motr-rpms/cortx-motr-2.0.0*.$(arch).rpm;
     yum install -qy ${CI_PROJECT_DIR}/motr-rpms/cortx-motr-devel-2.0.0*.$(arch).rpm;
     yum install -qy ${CI_PROJECT_DIR}/motr-rpms/isa-l-2.30.0*.$(arch).rpm;
