Update paths in documentation

--- a/infra/scripts/phobos/worker_node/Dockerfile
+++ b/infra/scripts/phobos/worker_node/Dockerfile
@@ -4,7 +4,7 @@ RUN yum check-update; yum update -qy; yum install -qy epel-release
 RUN yum config-manager -q --set-enabled powertools
 RUN yum install -qy ca-certificates cmake doxygen gcc gcc-c++ git glibc-devel glib2-devel graphviz hiredis-devel libcurl-devel jansson-devel
 RUN yum install -qy which libasan libubsan make openssl-devel python3 rpm-build wget nano ncurses libxml2-devel
-RUN yum install -qy autoconf automake libtool python3-devel libini_config-devel libattr-devel sg3_utils-devel protobuf-c-devel openssl-devel libpq-devel postgresql postgresql-contrib postgresql-server xxhash-devel
+RUN yum install -qy autoconf automake libtool python3-devel libini_config-devel libattr-devel libcmocka-devel sg3_utils-devel protobuf-c-devel openssl-devel libpq-devel postgresql postgresql-contrib postgresql-server xxhash-devel
 
 COPY * /
 RUN chmod 755 build_phobos.sh start_phobos.sh phobos_add_dir.sh
