Fix string comparison

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.24)
 
 set(CMAKE_PROJECT_VERSION "0.0.0" CACHE STRING "Project Version")
-if(CMAKE_PROJECT_VERSION MATCHES "")
+if("${CMAKE_PROJECT_VERSION}" MATCHES "")
   project(hestia VERSION "0.0.0" LANGUAGES C CXX)
 else()
   project(hestia VERSION ${CMAKE_PROJECT_VERSION} LANGUAGES C CXX)
+endif()
 
 message(STATUS "Hestia Version: " ${CMAKE_PROJECT_VERSION})
 
