--- a/examples/sample_phobos_integration/Containerfile
+++ b/examples/sample_phobos_integration/Containerfile
@@ -1,12 +1,12 @@
 FROM rockylinux:8
 
 RUN dnf check-update; dnf update -y; dnf install -y dnf-plugins-core epel-release; dnf install -y 'dnf-command(config-manager)'; dnf config-manager --set-enabled powertools; dnf update -y
-RUN dnf install -qy wget git cmake gcc gcc-c++ make ca-certificates cmake doxygen glibc-devel glib2-devel graphviz hiredis-devel libcurl-devel jansson-devel
-RUN yum install -qy which libasan libubsan openssl-devel python3 rpm-build wget nano ncurses libxml2-devel
-RUN yum install -qy autoconf automake libtool python3-devel libini_config-devel libattr-devel libcmocka-devel sg3_utils-devel protobuf-c-devel openssl-devel libpq-devel postgresql postgresql-contrib postgresql-server xxhash-devel
+RUN dnf install -qy wget python3 postgresql postgresql-contrib postgresql-server
 
-COPY * /
-#COPY ./config/hestia.yaml /configs
-#RUN ./hestia_phobos_fetch_and_build
+COPY *.rpm setup_phobos.sh launch_container_services.sh phobos.conf /
+RUN dnf install -y phobos*.$(arch).rpm hestia*.$(arch).rpm
 
-#CMD hestia server --config /configs/hestia.yaml
+COPY ./config/hestia.yaml /configs/
+RUN ./setup_phobos.sh phobos.conf /home/phobos_test_dir phobos_test_dir
+
+ENTRYPOINT ["./launch_container_services.sh"]
