Switch to phobos rpm builds rather than source.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,9 @@ stages:
     dnf install -qy $(cat ${HESTIA_DEPS}/e2e_test);
     pip3 install -r ${CI_PROJECT_DIR}/test/e2e_tests/requirements.txt; 
   - &install_phobos
-    dnf install -qy $(cat ${HESTIA_DEPS}/phobos);
-    pip3 install -r ${PHOBOS_SCRIPTS_DIR}/phobos_requirements.txt;
-    export PHOBOS_SRC=/phobos; cd /;cp ${PHOBOS_SCRIPTS_DIR}/*.patch .;
-    ${PHOBOS_SCRIPTS_DIR}/build_phobos.sh;
-    export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib64/phobos
+    wget https://ocean.eupex.eu/download/3.8/ocean/x86_64/phobos-1.95.1-2.el8.x86_64.rpm
+    wget https://ocean.eupex.eu/download/3.8/ocean/x86_64/phobos-devel-1.95.1-2.el8.x86_64.rpm
+    dnf install -y phobos*.rpm;
   - &start_phobos 
     ${PHOBOS_SCRIPTS_DIR}/init_phobos_db.sh;
     ${PHOBOS_SCRIPTS_DIR}/start_phobos.sh ${PHOBOS_SCRIPTS_DIR}/phobos.conf;
@@ -175,6 +173,7 @@ Release:
   before_script:
     - *update_distro
     - *install_base_dependencies
+    - *install_phobos
     - *install_release_dependencies
   script:
     - *configure
@@ -219,6 +218,7 @@ E2E_test:
     - Release
   before_script:
     - *update_distro
+    - *install_phobos
     - *install_e2e_dependencies
   script:
     - *e2e_test
@@ -253,6 +253,7 @@ Nightly_build:
   before_script:
     - *update_distro
     - *install_base_dependencies
+    - *install_phobos
     - *install_release_dependencies
   script:
     - *configure
@@ -381,6 +382,7 @@ Nightly_cleanup:
   before_script:
     - *update_distro
     - *install_base_dependencies
+    - *install_phobos
     - *install_release_dependencies
   script:
     - *configure
